--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "chart.js": "^3.7.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.1",
-    "mongodb": "^3.6.1"
+    "express-session": "^1.17.2",
+    "mongodb": "~3.7.2",
+    "mongoose": "^6.3.1",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "pug": "~3.0.0",
+    "utils": "^0.3.1"
   },
   "repository": {
     "type": "git",
